# CrateDigger

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  artists.example.json  config.example.json  config.example.toml  config.json  festivals.example.json  index.html  mkdocs.yml  organize.py  places.example.json  pyproject.toml  requirements-dev.txt  style.css  vulture_allowlist.py
.claude/docs/: console.md
.claude/plans/: 2026-03-27-cratedigger-refinement.md  2026-03-27-error-handling-remediation.md  2026-03-27-festival-set-organizer.md  2026-03-27-fix-nfo-art-for-skipped-files.md  2026-03-29-artist-groups-and-double-extension.md  2026-03-29-tag-preservation-and-search-fix-design.md  2026-03-30-curated-festival-logos-design.md  2026-03-30-display-artist-design.md  2026-03-30-display-artist-plan.md  2026-03-30-grouped-config-format.md  2026-03-30-structured-1001tl-metadata-design.md  2026-03-30-structured-1001tl-metadata-plan.md  2026-03-31-album-nfo-cleanup-and-fanart-design.md  2026-03-31-chapter-search-improvements.md  2026-04-01-festival-editions-design.md  2026-04-01-festival-editions-plan.md  2026-04-01-metadata-chain-design.md  2026-04-01-metadata-chain-plan.md  2026-04-01-poster-redesign-design.md  2026-04-01-poster-redesign-plan.md  2026-04-02-cli-ux-overhaul-design.md  2026-04-02-cli-ux-overhaul-plan.md
.claude/specs/: 2026-03-27-cratedigger-refinement-design.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: deploy-docs.yml  quality.yml  release.yml  tests.yml
assets/: browser.js
cratedigger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: 404.html  configuration.md  faq.md  festivals.md  getting-started.md  index.html  index.md  kodi-integration.md  library-layout.md  places.md  sitemap.xml  tag-reference.md  tracklists.md
docs/commands/: audit-logos.md  enrich.md  identify.md  organize.md
docs/commands/audit-logos/: index.html
docs/commands/enrich/: index.html
docs/commands/identify/: index.html
docs/commands/organize/: index.html
docs/configuration/: index.html
docs/faq/: index.html
docs/festivals/: index.html
docs/getting-started/: index.html
docs/kodi-integration/: index.html
docs/library-layout/: index.html
docs/places/: index.html
docs/plans/: 2026-04-12-per-chapter-tags-design.md  2026-04-12-per-chapter-tags.md  2026-04-16-organize-console-output-design.md  2026-04-18-organize-console-output.md
docs/plans/2026-04-12-per-chapter-tags/: index.html
docs/plans/2026-04-12-per-chapter-tags-design/: index.html
docs/plans/2026-04-16-organize-console-output-design/: index.html
docs/plans/2026-04-18-organize-console-output/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/tag-reference/: index.html
docs/tracklists/: index.html
festival_organizer/: __init__.py  album_nfo.py  analyzer.py  artwork.py  cache_maintenance.py  cache_ttl.py  classifier.py  cli.py  config.py  console.py  cover_embed.py  embed_tags.py  executor.py  fanart.py  frame_sampler.py  kodi.py  library.py  log.py  logging_util.py  metadata.py  mkv_attachments.py  mkv_tags.py  models.py  nfo.py  normalization.py  operations.py  parsers.py  paths.py  planner.py  poster.py  progress.py  runner.py  scanner.py  subprocess_utils.py  templates.py  update_check.py
festival_organizer/notify/: __init__.py  collect.py  models.py  render.py  send.py  throttle.py  thumbnails.py
festival_organizer/tracklists/: __init__.py  api.py  canary.py  chapters.py  cli_handler.py  dj_cache.py  overlays.py  players.py  query.py  scoring.py  source_cache.py
scripts/: migrate_tags.py  render_sample_email.py
site/: index.html  style.css
site/assets/: library.json
tests/: conftest.py  test_album_artist_mbids_operation.py  test_album_nfo.py  test_analyzer.py  test_analyzer_canonical_artist.py  test_artist_cache_dir.py  test_artwork.py  test_cache_maintenance.py  test_cache_ttl.py  test_chapter_artist_mbids_operation.py  test_chapter_mbids_compute.py  test_chapter_mbids_operation.py  test_classifier.py  test_cli.py  test_cli_email_wiring.py  test_cli_enrich_chapter_artist_mbids_wiring.py  test_cli_enrich_chapter_mbids_wiring.py  test_cli_postprocess.py  test_config.py  test_config_example_toml.py  test_console.py  test_console_enrich_summary.py  test_console_library_sync.py  test_console_organize_summary.py  test_console_step_progress.py  test_console_verdict.py  test_cover_embed.py  test_diff_highlight.py  test_dj_cache.py  test_email_config.py  test_embed_tags.py  test_enrich_contract_progress.py  test_executor.py  test_fanart.py  test_fanart_cache.py  test_fanart_lookup_mbid_precedence.py  test_fanart_mb_type_filter.py  test_fanart_mbid_overrides.py  test_folder_posters_fixtures.py  test_frame_sampler.py  (+50 more)
tests/fixtures/: build_folder_poster_fixtures.py
tests/fixtures/folder_posters/: 2025 - AFROJACK - EDC Las Vegas [kineticFIELD].mkv  2025 - Alesso - EDC Las Vegas [kineticFIELD].mkv  2026 - Armin van Buuren - Tomorrowland Winter [Mainstage].mkv  places.json
tests/integration/: test_enrichment_end_to_end.py  test_folder_posters_real.py
tests/tracklists/: test_canary.py  test_chapter_tags_performer_names.py  test_chapter_tags_refresh.py  test_dj_cache.py  test_dj_cache_batch.py  test_dj_cache_resolver.py  test_embed_chapters_orchestration.py  test_enrichment_logging.py  test_group_members.py  test_identify_self_heal.py  test_location_cleanup_e2e.py  test_models.py  test_overlay_chapters_e2e.py  test_overlays.py  test_parse_tracks.py  test_player_selection_e2e.py  test_players.py  test_print_tagged_metadata.py  test_source_cache.py  test_split_artist_title.py  test_top_genres.py  test_tracklists_api.py
tests/tracklists/fixtures/: afrojack_edc_2025.html  armin_kiki_amf_2025.html  armin_marlon_ultra_miami_2026.html  deadmau5_tomorrowland_brasil_2025.html  multiplayer_export.txt  multiplayer_tracklist.html  play_hard_ft_credit_row.html  pres_combined_artist_row.html  something_else_tomorrowland_winter_2026.html
