[project]
name = "cratedigger"
version = "0.13.0"
description = "Festival set & concert library manager"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "ftfy>=6.0",
    "numpy>=1.24",
    "requests>=2.28",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
vision = [
    "opencv-python-headless>=4.8",
]
all = [
    "cratedigger[vision]",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
include = ["festival_organizer*"]

[tool.setuptools.package-data]
"festival_organizer" = ["fonts/*.ttf"]

[project.scripts]
cratedigger = "festival_organizer.cli:run"

[tool.pytest.ini_options]
markers = [
    "integration: slow end-to-end tests that hit the filesystem, external APIs, or real MKV files. Run with: pytest -m integration",
]
# Skip integration tests by default; opt in via -m integration.
addopts = "-m 'not integration'"
