[project]
name = "cratedigger"
version = "0.27.1"
description = "Festival set & concert library manager"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Rouzax" }]
keywords = [
    "festival",
    "dj",
    "tracklist",
    "metadata",
    "artwork",
    "kodi",
    "jellyfin",
    "mkv",
    "music",
    "concert",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "Pillow>=12.2.0",
    "ftfy>=6.3.1",
    "numpy>=2.4.4",
    "platformdirs>=4.9.6",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://rouzax.github.io/CrateDigger/"
Documentation = "https://rouzax.github.io/CrateDigger/docs/"
Repository = "https://github.com/Rouzax/CrateDigger"
Issues = "https://github.com/Rouzax/CrateDigger/issues"

[project.optional-dependencies]
vision = [
    "opencv-python-headless>=4.13.0.92",
]
all = [
    "cratedigger[vision]",
]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.setuptools.packages.find]
include = ["festival_organizer*"]

[tool.setuptools.package-data]
"festival_organizer" = ["fonts/*.ttf"]
"festival_organizer.notify" = ["fixtures/*.jpg"]

[project.scripts]
cratedigger = "festival_organizer.cli:run"

[tool.pytest.ini_options]
markers = [
    "integration: slow end-to-end tests that hit the filesystem, external APIs, or real MKV files. Run with: pytest -m integration",
]
# Skip integration tests by default; opt in via -m integration.
addopts = "-m 'not integration'"
